--- a/frontend/src/app/frontoffice/main/main.component.html
+++ b/frontend/src/app/frontoffice/main/main.component.html
@@ -9,7 +9,7 @@
           <li class="nav-item">
             <a
               class="nav-link text-white"
-              routerLink="my-cameras"
+              routerLink="my-cameras-access"
               routerLinkActive="active"
               [routerLinkActiveOptions]="{ exact: false }"
             >
@@ -19,7 +19,7 @@
           <li class="nav-item">
             <a
               class="nav-link text-white"
-              routerLink="my-centers"
+              routerLink="my-centers-access"
               routerLinkActive="active"
               [routerLinkActiveOptions]="{ exact: false }"
             >
