--- a/frontend/src/app/backoffice/dashboard/dashboard.component.html
+++ b/frontend/src/app/backoffice/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
         <li class="nav-item">
           <a
             class="nav-link text-white"
-            routerLink="/dashboard"
+            routerLink="/backoffice"
             routerLinkActive="active"
             >Dashboard</a
           >
@@ -17,19 +17,18 @@
         <li class="nav-item">
           <a
             class="nav-link text-white"
-            routerLink="/users"
+            routerLink="/backoffice/cameras"
             routerLinkActive="active"
-            >Users</a
+            >Cameras</a
           >
         </li>
         <li class="nav-item">
           <a
             class="nav-link text-white"
-            routerLink="/backoffice/dashboard/control-center"
+            routerLink="/backoffice/camera-access"
             routerLinkActive="active"
+            >Camera Access</a
           >
-            Control Centers
-          </a>
         </li>
         <li class="nav-item">
           <a
@@ -43,27 +42,20 @@
         <li class="nav-item">
           <a
             class="nav-link text-white"
-            routerLink="/dashboard/ai-control-centers"
+            routerLink="/backoffice/control-center"
             routerLinkActive="active"
           >
-            AI Control Centers
+            Control Centers
           </a>
         </li>
         <li class="nav-item">
           <a
             class="nav-link text-white"
-            routerLink="/reports"
+            routerLink="/backoffice/ai-control-centers"
             routerLinkActive="active"
-            >Reports</a
           >
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link text-white"
-            routerLink="/settings"
-            routerLinkActive="active"
-            >Settings</a
-          >
+            AI Control Centers
+          </a>
         </li>
       </ul>
     </nav>
