--- a/frontend/src/app/frontoffice/front-control-centers/front-control-centers.component.html
+++ b/frontend/src/app/frontoffice/front-control-centers/front-control-centers.component.html
@@ -18,6 +18,9 @@
           <a class="nav-link text-primary" href="#">Accueil</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link text-primary" href="/cameras">Caméras</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-primary" href="#">Fonctionnalités</a>
         </li>
         <li class="nav-item">
